@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2005-03-13  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/constitute.c (ReadImage): Don't attempt to access image
+        members if image pointer is null.  Oops!
+
+</UL>
+<p>
 2005-03-12  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
